--- a/AutomationProject/test-output/emailable-report.html
+++ b/AutomationProject/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">SeleniumAutomation</th></tr>
-<tr><td><a href="#t0">Selenium</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">65</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">93</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SeleniumAutomation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Selenium &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">winiumTest.FileHandling</td><td><a href="#m0">File_Handling</a></td><td rowspan="1">1575119643800</td><td rowspan="1">20</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">winiumTest.FileHandling</td><td><a href="#m0">File_Handling</a></td><td rowspan="1">1588246167738</td><td rowspan="1">31</td></tr></tbody>
 </table>
-<h2>Selenium</h2><h3 id="m0">winiumTest.FileHandling#File_Handling</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">winiumTest.FileHandling#File_Handling</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
