--- a/AutomationProject/test-output/old/Default suite/classes.html
+++ b/AutomationProject/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>winiumTest.TakeScreenshots</td>
+<td>winiumTest.FileHandling</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TakescreenshotHandle</td>
+<td>File_Handling</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
