--- a/AutomationProject/test-output/old/SeleniumAutomation/methods.html
+++ b/AutomationProject/test-output/old/SeleniumAutomation/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SeleniumAutomation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dd6dab">  <td>19/11/30 18:44:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FileHandling.File_Handling()[pri:0, instance:winiumTest.FileHandling@4d5b6aac]">File_Handling</td> 
-  <td>main@915500720</td>   <td></td> </tr>
+<tr bgcolor="9580bf">  <td>21/04/17 20:10:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDemo.prameterTestOne(int, int)[pri:0, instance:winiumTest.TestNGDemo@67d48005]">prameterTestOne</td> 
+  <td>main@2005435445</td>   <td></td> </tr>
 </table>
