--- a/AutomationProject/test-output/emailable-report.html
+++ b/AutomationProject/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">SeleniumAutomation</th></tr>
-<tr><td><a href="#t0">Selenium</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">35</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">8,575</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SeleniumAutomation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Selenium &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">winiumTest.TestNGDemo</td><td><a href="#m0">prameterTestOne</a></td><td rowspan="1">1618670403601</td><td rowspan="1">10</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">winiumTest.TakeScreenshots</td><td><a href="#m0">TakescreenshotHandle</a></td><td rowspan="1">1643895661887</td><td rowspan="1">8518</td></tr></tbody>
 </table>
-<h2>Selenium</h2><h3 id="m0">winiumTest.TestNGDemo#prameterTestOne</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>1</td><td>2</td></tr><tr><th colspan="2">Messages</th></tr><tr><td colspan="2"><div class="messages">Logged</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">winiumTest.TakeScreenshots#TakescreenshotHandle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
